modified:   index.html 	modified:   script.js 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -268,6 +268,25 @@
       <p>Click the button below to begin your application process.</p>
       <a href="#" class="btn">Apply Now</a>
     </div>
+    <div class="stats">
+      <div class="stat">
+        <div class="count" data-target="245098">0</div>
+        <p>Applicants</p>
+      </div>
+      <div class="stat">
+        <div class="count" data-target="115034">0</div>
+        <p>Users</p>
+      </div>
+      <div class="stat">
+        <div class="count" data-target="31569">0</div>
+        <p>Scholarships Given</p>
+      </div>
+      <div class="stat">
+        <div class="count" data-target="2678889099" data-format="currency">₦0</div>
+        <p>Spent</p>
+      </div>
+    </div>
+    
   </section>
 
   <!-- ======== FOOTER ======== -->
